--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -1,36 +1,34 @@
+name: 'jaffle_shop'
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'basic_dbt_project'
-version: '1.0.0'
+config-version: 2
+version: '0.1'
 
-# This setting configures which "profile" dbt uses for this project.
-profile: 'basic_dbt_project'
+profile: 'jaffle_shop'
 
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
 model-paths: ["models"]
-analysis-paths: ["analyses"]
-test-paths: ["tests"]
 seed-paths: ["seeds"]
+test-paths: ["tests"]
+analysis-paths: ["analysis"]
 macro-paths: ["macros"]
-snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target"
+clean-targets:
   - "target"
-  - "dbt_packages"
+  - "dbt_modules"
+  - "logs"
 
+require-dbt-version: [">=1.0.0", "<2.0.0"]
 
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
+seeds:
+  +docs:
+    node_color: '#cd7f32'
 
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
-  basic_dbt_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+#  jaffle_shop:
+#    materialized: table
+#    staging:
+#      materialized: view
+#      +docs:
+#        node_color: 'silver'
+#    +docs:
+#      node_color: 'gold'
