--- a/dbt_project/profiles.yml
+++ b/dbt_project/profiles.yml
@@ -1,12 +1,8 @@
-basic_dbt_project:
+jaffle_shop:
+
   target: dev
   outputs:
     dev:
       type: duckdb
-      path: dev.duckdb
-      threads: 1
-
-    prod:
-      type: duckdb
-      path: prod.duckdb
-      threads: 4
+      path: 'jaffle_shop.duckdb'
+      threads: 24
