--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dagster==1.10.4
-dagster-webserver==1.10.4
+dagster==1.10.6
+dagster-webserver==1.10.6
 pandas==2.2.3
-dagster-dbt==*
-dbt-duckdb==*
-duckdb==*
-plotly==*
+dbt-core==1.9.3
+dagster-dbt==0.26.6
+dbt-duckdb==1.9.2
+duckdb==1.2.1
