uncomment models in project file

--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -24,11 +24,11 @@ seeds:
     node_color: '#cd7f32'
 
 models:
-#  jaffle_shop:
-#    materialized: table
-#    staging:
-#      materialized: view
-#      +docs:
-#        node_color: 'silver'
-#    +docs:
-#      node_color: 'gold'
+  jaffle_shop:
+    materialized: table
+    staging:
+      materialized: view
+      +docs:
+        node_color: 'silver'
+    +docs:
+      node_color: 'gold'
