--- a/jaffle_dagster/Dockerfile_dagster
+++ b/jaffle_dagster/Dockerfile_dagster
@@ -16,6 +16,7 @@ ENV DAGSTER_HOME=/opt/dagster/dagster_home/
 
 RUN mkdir -p $DAGSTER_HOME
 
-COPY jaffle_dagster/dagster.yaml jaffle_dagster/workspace.yaml $DAGSTER_HOME
+COPY jaffle_dagster/workspace.yaml $DAGSTER_HOME
+COPY jaffle_dagster/dagster.docker.yaml $DAGSTER_HOME/dagster.yaml
 
 WORKDIR $DAGSTER_HOME
