--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - -w
       - workspace.yaml
     container_name: webserver
+    image: webserver
     expose:
       - "3000"
     ports:
