--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,11 @@ services:
     image: repository_image
     restart: always
     environment:
+      DAGSTER_POSTGRES_HOST: "postgres"
       DAGSTER_POSTGRES_USER: "postgres_user"
       DAGSTER_POSTGRES_PASSWORD: "postgres_password"
       DAGSTER_POSTGRES_DB: "postgres_db"
+      DAGSTER_POSTGRES_PORT: "5432"
       DAGSTER_CURRENT_IMAGE: "repository_image"
     networks:
       - docker_network
@@ -62,9 +64,11 @@ services:
     ports:
       - "3000:3000"
     environment:
+      DAGSTER_POSTGRES_HOST: "postgres"
       DAGSTER_POSTGRES_USER: "postgres_user"
       DAGSTER_POSTGRES_PASSWORD: "postgres_password"
       DAGSTER_POSTGRES_DB: "postgres_db"
+      DAGSTER_POSTGRES_PORT: "5432"
     volumes: # Make docker client accessible so we can terminate containers from the webserver
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
@@ -88,9 +92,11 @@ services:
     container_name: daemon
     restart: on-failure
     environment:
+      DAGSTER_POSTGRES_HOST: "postgres"
       DAGSTER_POSTGRES_USER: "postgres_user"
       DAGSTER_POSTGRES_PASSWORD: "postgres_password"
       DAGSTER_POSTGRES_DB: "postgres_db"
+      DAGSTER_POSTGRES_PORT: "5432"
     volumes: # Make docker client accessible so we can launch containers using host docker
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
