--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 # dagster core, webserver, daemon
-dagster==1.10.6
-dagster-webserver==1.10.6
-dagster-graphql==1.10.6
-dagster-postgres==0.26.6
-dagster-docker==0.26.6
+dagster==1.10.9
+dagster-webserver==1.10.9
+dagster-graphql==1.10.9
+dagster-postgres==0.26.9
+dagster-docker==0.26.9
+dagster-aws==0.26.9
 
 # repository
-dagster-dbt==0.26.6
+dagster-dbt==0.26.9
 pandas==2.2.3
 dbt-core==1.9.3
 dbt-duckdb==1.9.2
